--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
@@ -29,8 +30,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.0",
+    "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
   "prisma": {
