--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts"
   },
@@ -22,10 +22,11 @@
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "tsc-alias": "^1.8.16",
+    "typescript": "^5.7.3",
+    "@prisma/client": "^6.3.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
