--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^6.3.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -20,11 +21,10 @@
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
-    "prisma": "^6.3.1",
+    "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
-    "typescript": "^5.7.3",
-    "@prisma/client": "^6.3.1"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
